# auth-service

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/tests/: test_login.py  test_refresh.py  test_register.py
docs/: architecture.md
docs/register/: register.md
docs/specs/: overview.md
frontend/: login.html  package-lock.json  package.json  register.html  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/components/AuthLayout/: AuthLayout.module.css  AuthLayout.tsx
frontend/src/components/BrandPanel/: BrandPanel.module.css  BrandPanel.tsx
frontend/src/components/Button/: Button.module.css  Button.tsx
frontend/src/components/Divider/: Divider.module.css  Divider.tsx
frontend/src/components/InputField/: InputField.module.css  InputField.tsx
frontend/src/components/PasswordInput/: PasswordInput.module.css  PasswordInput.tsx
frontend/src/components/ui/: password-input.tsx
frontend/src/hooks/: useLogin.ts  usePasswordVisibility.ts  useRegister.ts
frontend/src/lib/: apiClient.ts  auth.ts
frontend/src/pages/HomePage/: HomePage.tsx
frontend/src/pages/LoginPage/: LoginPage.module.css  LoginPage.tsx
frontend/src/pages/RegisterPage/: RegisterPage.module.css  RegisterPage.tsx
frontend/src/styles/: globals.css  tokens.css
frontend/src/types/: auth.ts
